Change to a better graph sampler API
Rather than combine metadata, history and point provider in 3 different providers we'll return an abstract class implementation.